# habitron

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_v2.md  CHANGELOG.md  INFO.md  README.md  RELEASE_NOTES_v2.7.0.md  __init__.py  binary_sensor.py  button.py  changelog.md  climate.py  config_flow.py  developer_doc.md  hacs.json  info.md  interfaces.py  light.py  module.py  mypy.ini  number.py  pyproject.toml  repository.yaml  requirements_test.txt  router.py  select.py  sensor.py  strings.json
.github/workflows/: cleanup.yaml  release.yaml  test.yml
custom_components/habitron/: .gitattributes  README.md  __init__.py  _axml.py  _helpers.py  assist_satellite.py  binary_sensor.py  button.py  camera copy 2.py  camera copy.py  camera.py  changelog.md  climate.py  communicate.py  config_flow.py  const.py  coordinator.py  cover.py  device_trigger.py  diagnostics.py  event.py  health.py  helpers.py  icons.json  interfaces.py  light.py  manifest.json  media_player.py  module.py  notify.py  number.py  quality_scale.yaml  repairs.py  router.py  select.py  sensor.py  services.py  services.yaml  smart_hub.py  smart_ip.py  (+8 more)
custom_components/habitron/firmware/: sctouch_v1.1.8.apk  sctouch_v1.1.9.apk
custom_components/habitron/logos/: hbt-icons.js
custom_components/habitron/translations/: de.json  en.json
custom_components/habitron/ws_provider/: __init__.py  handlers.py  provider.py  voice_pipeline.py
scripts/: build_core_tree.sh  habitron-mode.sh
tests/: __init__.py
tests/components/: __init__.py
tests/components/habitron/: conftest.py  const.py  test_assist_satellite.py  test_axml.py  test_binary_sensor.py  test_button.py  test_camera.py  test_climate.py  test_communicate.py  test_config_flow.py  test_coordinator.py  test_cover.py  test_device_trigger.py  test_diagnostics.py  test_event.py  test_health.py  test_init.py  test_interfaces.py  test_light.py  test_media_player.py  test_module.py  test_notify.py  test_number.py  test_real_setup.py  test_repairs.py  test_router.py  test_select.py  test_sensor.py  test_services.py  test_smart_hub.py  test_switch.py  test_system_health.py  test_text.py  test_update.py  test_ws_provider.py  test_ws_provider_handlers.py  test_ws_provider_voice_pipeline.py
translations/: de.json
