[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "habitron"
version = "2.8.0"
description = "Habitron custom integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "custom_components/habitron/data"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error::DeprecationWarning:homeassistant.*",
    "error::PendingDeprecationWarning:homeassistant.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["custom_components/habitron"]
omit = [
    "custom_components/habitron/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
# Mirrors Home Assistant core's ruff config so "clean here" == "clean in
# core". Keep the select/ignore lists and sub-configs below in sync with
# core's pyproject.toml; only the per-file-ignores paths are adapted to
# the HACS layout (custom_components/habitron instead of
# homeassistant/components/<domain>).
required-version = ">=0.15.15"
line-length = 88
target-version = "py314"
extend-exclude = ["custom_components/habitron/data"]

[tool.ruff.lint]
select = [
    "A001",   # Variable {name} is shadowing a Python builtin
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",
    "C",      # complexity
    "COM818", # Trailing comma on bare tuple prohibited
    "D",      # docstrings
    "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "DTZ011", # Use datetime.now(tz=).date() instead of date.today()
    "E",      # pycodestyle
    "F",      # pyflakes/autoflake
    "F541",   # f-string without any placeholders
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "ICN001", # import concentions; {name} should be imported as {asname}
    "LOG",    # flake8-logging
    "N804",   # First argument of a class method should be named cls
    "N805",   # First argument of a method should be named self
    "N806",   # Variable {name} in function should be snake_case
    "N815",   # Variable {name} in class scope should not be mixedCase
    "PERF",   # Perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-pathlib
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules (see `ignore` for exclusions)
    "S107",   # Possible hardcoded password assigned to function default
    "S102",   # Use of exec detected
    "S103",   # bad-file-permissions
    "S108",   # hardcoded-temp-file
    "S301",   # suspicious-pickle-usage
    "S306",   # suspicious-mktemp-usage
    "S307",   # suspicious-eval-usage
    "S313",   # suspicious-xmlc-element-tree-usage
    "S314",   # suspicious-xml-element-tree-usage
    "S315",   # suspicious-xml-expat-reader-usage
    "S316",   # suspicious-xml-expat-builder-usage
    "S317",   # suspicious-xml-sax-usage
    "S318",   # suspicious-xml-mini-dom-usage
    "S319",   # suspicious-xml-pull-dom-usage
    "S601",   # paramiko-call
    "S602",   # subprocess-popen-with-shell-equals-true
    "S604",   # call-with-shell-equals-true
    "S608",   # hardcoded-sql-expression
    "S609",   # unix-command-wildcard-injection
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T100",   # Trace found: {name} used
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # Tidy imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "UP031",  # Use format specifiers instead of percent format
    "UP032",  # Use f-string instead of `format` call
    "W",      # pycodestyle
]

ignore = [
    "ASYNC109", # Async function definition with a `timeout` parameter Use `asyncio.timeout` instead
    "ASYNC110", # Use `asyncio.Event` instead of awaiting `asyncio.sleep` in a `while` loop
    "ASYNC240", # Use an async function for entering the file system
    "B008",     # Do not perform function call in argument defaults; commonly used in Home Assistant (e.g. cv.* validators)
    "B019",     # Use of functools.lru_cache or functools.cache on methods can lead to memory leaks
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D406",     # Section name should end with a newline
    "D407",     # Section name underlining
    "D417",     # Missing argument descriptions in docstring - to allow documenting only non-obvious parameters
    "E501",     # line too long

    "PLC1901", # {existing} can be simplified to {replacement} as an empty string is falsey; too many false positives
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW0108", # Unnecessary lambda wrapping a function call; can often be replaced by the function itself
    "PLW1641", # __eq__ without __hash__
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT011",   # pytest.raises({exception}) is too broad, set the `match` parameter or use a more specific exception
    "PT018",   # Assertion should be broken down into multiple parts
    "RUF001",  # String contains ambiguous unicode character.
    "RUF012",  # Mutable class attributes should be annotated with typing.ClassVar
    "RUF015",  # Prefer next(...) over single element slice
    "RUF043",  # Pattern passed to match= contains metacharacters but is neither escaped nor raw
    "SIM102",  # Use a single if statement instead of nested if statements
    "SIM103",  # Return the condition {condition} directly
    "SIM108",  # Use ternary operator {contents} instead of if-else-block
    "SIM115",  # Use context handler for opening files

    # Moving imports into type-checking blocks can mess with pytest.patch()
    "TC001", # Move application import {} into a type-checking block
    "TC002", # Move third-party import {} into a type-checking block
    "TC003", # Move standard library import {} into a type-checking block
    # Quotes for typing.cast generally not necessary, only for performance critical paths
    "TC006", # Add quotes to type expression in typing.cast()

    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY400", # Use `logging.exception` instead of `logging.error`

    "UP047", # Non PEP 696 generic function
    "UP049", # Avoid private type parameter names

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",

    # Disabled because ruff does not understand type of __all__ generated by a function
    "PLE0605",

    "FURB116",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"
"__future__.annotations".msg = "It should not be needed because Home Assistant requires Python 3.14+"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# Allow relative imports within the integration's sub-packages (ws_provider),
# mirroring core's "homeassistant/components/*/*/*" = ["TID252"].
"custom_components/habitron/*/*.py" = ["TID252"]
# pathlib migration not enforced (mirrors core's temporary PTH ignore).
"custom_components/habitron/**" = ["PTH"]
"tests/**" = ["PTH"]
# AXML format parsing constants.
"custom_components/habitron/_axml.py" = ["PLR2004"]
# Tests stay lax on rules that don't add value in a test suite.
"tests/**/*.py" = [
    "S101",     # asserts are fine in tests
    "SLF001",   # tests legitimately inspect private members
    "PLC0415",  # imports inside test bodies are common
    "PERF",     # micro-perf rules don't matter in tests
    "TID251",   # relative imports resolve to tests.* (the ban targets prod code)
    "TID252",   # relative imports within the test package
    "D",        # docstring rules relaxed for tests
    "F841",     # anchoring values in unused locals aids readability
    "PT",       # flake8-pytest-style nuances
    "RET504",   # explicit assign-before-return reads clearer in tests
    "SIM117",   # nested with-statements are fine in tests
    "RUF003",   # ambiguous unicode in comments
    "ARG",      # unused fixture/mock arguments
    "E402",     # module-level import not at top — conftest does setup first
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
